# server_side_rendering_web_app

./: Cargo.toml  README.md
migrations/2022-04-19-225043_create_certs/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
static/: add.html  cert.html  index.html
static/css/: index.css
