[package]
name = "server_side_rendered_my_blogspot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-files = "0.6.0"
serde_json = "1.0.79"
handlebars = {version="4.2.2", features=["dir_source"]}